Update the package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://midas0615.github.io/React-Word-Cloud",
-  "name": "React-Word-Cloud",
+  "homepage": "http://aeremin.github.io/Word-Cloud-React",
+  "name": "Word-Cloud-React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
