update the property

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aeremin.github.io/Word-Cloud-React",
+  "homepage": "http://aeremin474.github.io/Word-Cloud-React",
   "name": "Word-Cloud-React",
   "version": "0.1.0",
   "private": true,
